Agregado módulo de reservas, canchas y mejoras en cliente